# calculadora

./: .gitignore  BUILD_LOCAL_LINUX.md  BUILD_RESUMO.md  BUILD_WINDOWS_LOCAL.md  CMakeLists.txt  DISTRIBUICAO_COMPLETA.md  DISTRIBUICAO_STATUS.md  DISTRIBUICAO_WINDOWS.md  DOWNLOAD.md  README.md  TESTE_RESUMO.md  WINDOWS_FINAL.md  calculadora_windows.cpp  create-portable.sh  debug_calc.cpp  debug_detailed.sh  functional_test.cpp  installer.nsi  setup-complete.sh  simple_test.cpp  test-functional.sh  test_calculator.cpp  test_manual.sh  test_specific.sh  verify_issues.sh
.github/: copilot-instructions.md
.github/workflows/: build-windows.yml  build.yml
include/: Calculator.h  CalculatorHistory.h
src/: Calculator.cpp  CalculatorHistory.cpp  main.cpp
